# icon_lv_8

./: README.md
Releases/Intermediate_Releases/V_300_Disable_Early_FT_Entry/: README
Releases/Official_Release/: iCUBE_iCON_Release_Notes.docx
Releases/Official_Release/iCON_0x200_Series/iCON_v_0x207/: README
Releases/Official_Release/iCON_0x200_Series/iCON_v_0xE207_Special_Release/: REAMDE
Source/icon-lv-8/: CMakeLists.txt  custom_partition_table.csv  packet_to_server.txt  sdkconfig  sdkconfig.old
Source/icon-lv-8/components/: CMakeLists.txt  esp32s2_24lc512.c  esp32s2_adc.c  esp32s2_algorithm.c  esp32s2_buff_operations.c  esp32s2_button.c  esp32s2_buzzer.c  esp32s2_data_log.c  esp32s2_fatal_err.c  esp32s2_gpio.c  esp32s2_https_protocol.c  esp32s2_i2c_protocol.c  esp32s2_ina226.c  esp32s2_pac1720.c  esp32s2_pac1952.c  esp32s2_parse_data.c  esp32s2_socket.c  esp32s2_tasks.c  esp32s2_wifi.c
Source/icon-lv-8/components/inc/: esp23s2_pac1720.h  esp32s2_24lc512.h  esp32s2_adc.h  esp32s2_algorithm.h  esp32s2_buff_operations.h  esp32s2_button.h  esp32s2_buzzer.h  esp32s2_data_log.h  esp32s2_fatal_err.h  esp32s2_gpio.h  esp32s2_https_protocol.h  esp32s2_i2c_protocol.h  esp32s2_ina226.h  esp32s2_main.h  esp32s2_pac1952.h  esp32s2_parse_data.h  esp32s2_socket.h  esp32s2_task.h  esp32s2_wifi.h
Source/icon-lv-8/main/: CMakeLists.txt  main.c
Source/icon-lv-8/spiffs_dir/: domain.txt  getCert.txt  getReadWrite.txt  updateCalib.txt  updateConfig.txt  updateLog.txt  updateOTA.txt  updateSoC.txt  updateStatus.txt  updateThreshold.txt
(+1 files in other folders)
